[package]
name = "steam-vent"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
steam-vent-proto = { version = "0.1", path = "./protobuf" }
steam-vent-crypto = { version = "0.2", path = "./crypto" }
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = "0.1"
binread = "2"
binwrite = "0.2"
thiserror = "1"
bytes = "1"
byteorder = "1"
protobuf = "=2.24.1"
bytemuck = { version = "1", features = ["derive"] }
crc = "2"
flate2 = "1"
log = "0.4"
steamid-ng = "1"
futures-sink = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
dashmap = "5"
num_enum = "0.5"
bytebuffer-new = "0.2"
rust-crypto = "0.2"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
env_logger = "0.8"
async-std = "1.11"

[workspace]

[profile.dev]
codegen-units = 1